<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.GroupsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/local"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:text="@string/groups_local" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/groups_local_description"
                android:textAppearance="?attr/textAppearanceBodySmall" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp" />

            <CheckBox
                android:id="@+id/notLocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:text="@string/groups_not_local" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/groups_not_local_description"
                android:textAppearance="?attr/textAppearanceBodySmall" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp" />

            <CheckBox
                android:id="@+id/tollFree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:text="@string/groups_toll_free" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/groups_toll_free_description"
                android:textAppearance="?attr/textAppearanceBodySmall" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp" />

            <CheckBox
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:text="@string/groups_mobile" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/groups_mobile_description"
                android:textAppearance="?attr/textAppearanceBodySmall" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="5dp" />

            <CheckBox
                android:id="@+id/localMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:textAppearance="?attr/textAppearanceBodyLarge"
                android:text="@string/groups_local_mobile" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/groups_local_mobile_description"
                android:textAppearance="?attr/textAppearanceBodySmall" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>