<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MainFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:isScrollContainer="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/contacted"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contacted_main"
                    android:textAppearance="?attr/textAppearanceBodyLarge" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/contacted_description"
                    android:textAppearance="?attr/textAppearanceBodySmall" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/groups"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/groups_main"
                    android:textAppearance="?attr/textAppearanceBodyLarge" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/groups_description"
                    android:textAppearance="?attr/textAppearanceBodySmall" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/repeated"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/repeated_main"
                    android:textAppearance="?attr/textAppearanceBodyLarge" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/repeated_description"
                    android:textAppearance="?attr/textAppearanceBodySmall" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/messages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/messages_main"
                    android:textAppearance="?attr/textAppearanceBodyLarge" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/messages_description"
                    android:textAppearance="?attr/textAppearanceBodySmall" />

                <Space
                    android:id="@+id/space"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="5dp" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/stir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stir_main"
                    android:textAppearance="?attr/textAppearanceBodyLarge" />

                <TextView
                    android:id="@+id/stirDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/stir_description"
                    android:textAppearance="?attr/textAppearanceBodySmall" />

            </LinearLayout>
        </ScrollView>

        <ToggleButton
            android:id="@+id/toggle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?attr/textAppearanceTitleMedium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>